Fixed dark mode link styling

--- a/static/styles.css
+++ b/static/styles.css
@@ -310,6 +310,14 @@ body {
 	margin-top: 5px;
 }
 
+.dark-mode a{
+	color: #2bb8d2;
+}
+.dark-mode a:visited{
+	color: pink;
+}
+
+
 #editor > :last-child {
 	padding-bottom: 55vh;
 }
